# sorting_fixation_point

./: CMakeLists.txt
data/: input.txt  output.txt
src/nuwajene/: assignment.cpp
